syntax = "proto3";

package msgpb;

option go_package = "/msgpb";

import "google/protobuf/timestamp.proto";

message Message {
    int64 id_messages = 1;
    int64 id_from = 2;
    int64 id_to = 3;
    string msg = 4;
    google.protobuf.Timestamp time = 5;
}

  
service Service {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
}

message GetMessagesRequest{
    int64 id_from = 1;
    int64 id_to = 2;
    int64 offset = 3;
    int64 limit = 4;
}

message GetMessagesResponse{
    repeated Message messages = 1;
}

message SendMessageRequest{
    int64 id_from = 1;
    int64 id_to = 2;
    string msg = 3;
    google.protobuf.Timestamp time = 4;
}

message SendMessageResponse{
    
 
}



